xxl-job/3.3.0/镜像描述.md
# 快速参考

- 开源代码地址：**[github](https://github.com/xuxueli/xxl-job)**  **[gitee](http://gitee.com/xuxueli0323/xxl-job)**
- 代码维护者：**xuxueli**
- 中文文档地址：**[中文文档](https://www.xuxueli.com/xxl-job/)**
- docker镜像维护：https://github.com/loulangogogo/docker-hub
- 提交问题：**[有问题](https://github.com/loulangogogo/docker-hub/issues)**
- 提交功能改进：**[功能改进](https://github.com/loulangogogo/docker-hub/issues)**

> **注：本镜像只包含了 admin（调度中心），executor执行器可以根据源代码启动测试，或在自己的项目中写。**



> **【本docker镜像来自github开源代码，如有侵权请联系作者删除。】**



# 初始化一个实例

该镜像使用外部 mysql 数据库，需要先创建一个库表，可以参考文档创建，或查看 [xxl-job.sql(注意选择版本)](https://github.com/xuxueli/xxl-job/blob/3.3.0-release/doc/db/tables_xxl_job.sql)。

### docker

> docker run --name xxl-job -e DB_HOST=127.0.0.1 -e DB_PORT=3306 -e DB_USER=root -e DB_NAME: xxl_job -e DB_PASSWORD=root -p 8080:8080 osmiling/xxl-job:tag



### docker-compose

```yaml
version: '3.1'

services:
  xxl-job:
    image: osmiling/xxl-job:3.3.0
    container_name: xxl-job
    logging:
      driver: json-file
      options:
        max-size: "100m"
        max-file: "5"
    restart: always
    ports:
      - "8080:8080"
    environment:
      DB_HOST: 127.0.0.1
      DB_PORT: 3306
      DB_NAME: xxl_job
      DB_USER: root
      DB_PASSWORD: root
    volumes:
        - /etc/localtime:/etc/localtime #将外边时间直接挂载到容器内部，权限只读
        - ./logs:/data/applogs/xxl-job # 将文件日志挂在到宿主机
```



# 环境变量

| 变量             | 说明                      | 默认值              | 版本  |
|-----------------| ------------------------- | ----- |-----------------|
| SERVER_PORT     | 端口设置                  | 8080              | 2.4.1 |
| SERVER_PATH     | 应用上下文路径 | /xxl-job-admin | 2.4.1 |
| DB_HOST            | mysql 主机ip              | 127.0.0.1     | 2.4.1 |
| DB_PORT            | mysql 端口                | 3306            | 2.4.1 |
| DB_USER            | mysql 用户名                | root         | 2.4.1 |
| DB_NAME | mysql数据库名称 | xxl-job | 2.4.2 |
| DB_PASSWORD        | mysql 密码                  | 123456            | 2.4.1 |
| MAIL_HOST          | mail 邮箱host（smtp.qq.com） | smtp.163.com | 2.4.1 |
| MAIL_PORT          | mail 邮箱端口 | 25 | 2.4.1 |
| MAIL_USER          | mail 邮箱使用名称 | your_email@163.com | 2.4.1 |
| MAIL_PASSWORD      | mail 邮箱授权码 | xxx | 2.4.1 |
| MAIL_FROM          | mail 发送邮件的邮箱 | your_password_or_authorization_code | 2.4.1 |
| JOB_ACCESS_TOKEN    | xxl-job的accesstoken | default_token | 2.4.1 |
| JOB_TIMEOUT | 调度中心向执行器发起 HTTP 回调时的连接读取超时时间（秒） | 5 | 3.3.0 |
| JOB_FAST_POOL_MAX | 快速线程池最大值 | 300 | 3.3.0 |
| JOB_SLOW_POOL_MAX | 慢速线程池最大值 | 200 | 3.3.0 |
| JOB_LOG_DAYS | 日志保留天数 | 30 | 3.3.0 |

**注意：可在项目中对应 application.properties 使用。**

> **如果环境变量无法满足配置，可自行映射 application.properties 配置启动。**
